# crawlyx

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  dispatcher.rs  lib.rs  main.rs  state.rs  tree.rs  work.rs
src/fetcher/: mod.rs
src/graph/: mod.rs  utils.rs
src/hashtable/: mod.rs  utils.rs
src/normalizer/: fragment.rs  mod.rs  port.rs  query.rs  relative.rs  scheme_host.rs  trailing_slash.rs
src/output/: manifest.rs  mod.rs
src/parser/: mod.rs
src/queue/: inprocess.rs  mod.rs  redis_queue.rs
src/scheduler/: mod.rs
src/storage/: mod.rs
src/worker/: mod.rs
tests/: hashtable_test.rs  normalizer_test.rs
