[package]
name = "crawlyx_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
crossbeam-utils = "0.8.21"
reqwest = { version = "0.13.3", features = ["blocking"] }
url = "2.5.8"
scraper = "0.20"
tokio = { version = "1", features = ["full", "tracing"] }
console-subscriber = "0.4"
htmd = "0.5.4"
clap = { version = "4.5.11", features = ["derive"] }
