[package]
name = "crawlyx_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
crossbeam-utils = "0.8.21"
reqwest = { version = "0.13.3", features = ["json"] }
url = "2.5.8"
scraper = "0.20"
tokio = { version = "1", features = ["full", "tracing"] }
console-subscriber = "0.4"
htmd = "0.5.4"
readability = "0.3.0"
redis = { version = "0.27.0", features = ["tokio-comp", "tls-native-tls", "tokio-native-tls-comp"] }
async-trait = "0.1.81"
clap = { version = "4.5.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "2.0"
pathdiff = "0.2"
chromiumoxide = "0.9.1"
futures = "0.3"
